--- a/2.0-Upgrade.md
+++ b/2.0-Upgrade.md
@@ -6,8 +6,8 @@ Karafka-Testing 2.0 some breaking changes in the way consumer builder and messag
 
 Please upgrade your application to `Karafka 2.0` first.
 
-- Replace `#karafka_consumer_for` in your specs with `#karafka.consumer_for`.
-- Replace `#publish_for_karafka` in your specs with `#karafka.publish`.
+- Replace `#karafka_consumer_for` in your specs with `#karafka.consumer_for`
+- Replace `#publish_for_karafka` in your specs with `#karafka.publish`
 
 And that's all!
 
