--- a/2.0-Upgrade.md
+++ b/2.0-Upgrade.md
@@ -7,7 +7,7 @@ Karafka-Testing 2.0 some breaking changes in the way consumer builder and messag
 Please upgrade your application to `Karafka 2.0` first.
 
 - Replace `#karafka_consumer_for` in your specs with `#karafka.consumer_for`
-- Replace `#publish_for_karafka` in your specs with `#karafka.publish`
+- Replace `#publish_for_karafka` in your specs with `#karafka.produce`
 
 And that's all!
 
@@ -24,8 +24,8 @@ RSpec.describe CountersConsumer do
   let(:sum) { nr1_value + nr2_value }
 
   before do
-    karafka.publish({ 'number' => nr1_value }.to_json)
-    karafka.publish({ 'number' => nr2_value }.to_json, partition: 2)
+    karafka.produce({ 'number' => nr1_value }.to_json)
+    karafka.produce({ 'number' => nr2_value }.to_json, partition: 2)
     allow(Karafka.logger).to receive(:info)
   end
 
